LiveText-LiveText3.14/src/objects/ScreenPopSequence__c.object
<CustomObject>
    <description>The order that LiveText will pop records to LiveText agents after an inbound text is accepted.</description>
    <fields>
        <fullName>LiveText_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Live Text Phone Number</description>
        <label>LiveText Number</label>
        <referenceTo>LiveText_Number__c</referenceTo>
        <relationshipLabel>ScreenPopSequence</relationshipLabel>
        <relationshipName>ScreenPopSequence</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>Record Type (Account, Contact, Lead, etc.)</description>
        <label>Record Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Screen Pop Sequence</label>
    <nameField>
        <label>ScreenPopSequence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screen Pop Sequences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>